--- a/css/style.css
+++ b/css/style.css
@@ -52,6 +52,32 @@ header {
 }
 
 .welcome-text__h1 {
-    font-size: 2.5em;
+
 }
+
+h1 {
+    font-size: 48px
+}
+
+h2 {
+    font-size: 40px;
+}
+
+h3 {
+    font-size: 32px;
+}
+
+h4 {
+    font-size: 28px;
+} 
+
+h5 {
+    font-size: 24px;
+}
+
+h6 {
+    font-size: 20px;
+}
+
+
 
