--- a/css/library.css
+++ b/css/library.css
@@ -11,29 +11,24 @@ html {
 } 
 
 h1 {
-    font-size: 48px
+    font-size: 3.25em;
 }
 
 h2 {
-    font-size: 40px;
+    font-size: 2.75em;
 }
 
 h3 {
-    font-size: 32px;
+    font-size: 2.25em;
 }
 
 h4 {
-    font-size: 28px;
+    font-size: 2em;
 } 
 
 h5 {
-    font-size: 24px;
+    font-size: 1.75em;
 }
-
-h6 {
-    font-size: 20px;
-}
-
 
 .button {
     font-weight: 700;
