--- a/css/library.css
+++ b/css/library.css
@@ -112,4 +112,13 @@ img {
     flex-wrap: wrap;
 }
 
+a {
+    color: var(--pink);
+    text-decoration: none;
+}
+
+mark {
+    background-color: var(--pink);
+    color: var(--white);
+}
 
