--- a/css/library.css
+++ b/css/library.css
@@ -99,17 +99,20 @@ caption {
 
 img {
     width: 100%;
+    height: 100%;
     display: block;
-}
-
-.image {
-    width: 33vw;
+    object-fit: cover;
 }
 
 .gallery {
     display: flex;
-    flex-direction: row;
+    gap: 5px;
     flex-wrap: wrap;
+}
+
+figure {
+    max-width: 400px;
+    border-radius: 20px;
 }
 
 a {
