--- a/css/style.css
+++ b/css/style.css
@@ -11,6 +11,7 @@ header {
     padding-top: 1.5em;
     padding-bottom: 40vh;
     background-color: var(--darkestpurple);
+    border-bottom: solid 5px var(--darkpurple)
 }
 
 .navigace {
@@ -104,3 +105,74 @@ section {
     padding: 2em;
     display: inline-block;
 }
+
+.footer__img-div {
+    width: 70px;
+    height: 100px;
+    display: block;
+}
+
+.footer__img-git {
+    width: 100px;
+    height: 70px;
+    display: block
+}
+
+.footer {
+    margin-top: 2em;
+    margin-bottom: 2em;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+}
+
+.footer__html-css {
+    display: flex;
+    justify-content: space-around;
+}
+
+.footer__typolib {
+    margin-top: 0;
+}
+
+@media screen and (max-width: 975px) {
+    .navigace__menu {
+        gap: 20px;
+        padding-left: 0px;
+        margin: 1em;
+    }
+
+    .navigace {
+        flex-direction: column;
+        align-items: center;
+    }
+}
+
+@media screen and (max-width: 640px) {
+    .navigace__menu {
+        gap: 0px;
+        flex-direction: column;
+    }
+
+
+    .welcome-text {
+        margin-top: 0em;
+    }
+
+    main {
+        padding-left: .5em;
+        padding-right: .5em;
+    }
+
+    .footer {
+        display: flex;
+        flex-direction: column;
+        margin: 2em;
+    }
+
+    @media screen and (max-width: 450px) {
+    .welcome-text__h1 {
+        padding: 0em;
+    }
+
+    }}
